# can-ecu-sim

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
can-bus/: CMakeLists.txt
can-bus/include/canbus/: can_socket.hpp  frame.hpp
can-bus/src/: can_socket.cpp  frame.cpp
can-bus/src/tools/: can_dump_tool.cpp  can_send_tool.cpp
can-bus/tests/: CMakeLists.txt  test_loopback.cpp
ecu-firmware/: AGENTS.md
ecu-firmware/scheduling_demo/: CMakeLists.txt  prj.conf
ecu-firmware/scheduling_demo/src/: main.c
ecu-firmware/sensor_node/: CMakeLists.txt  prj.conf
ecu-firmware/sensor_node/src/: main.c
lima/: can-dev.yaml
monitor-gui/app/: CMakeLists.txt
monitor-gui/app/src/: bridge_client.cpp  bridge_client.hpp  main.cpp
monitor-gui/bridge/: CMakeLists.txt
monitor-gui/bridge/src/: bridge.cpp
